src/pages/LoginPage.css
/* Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Quicksand:wght@700&display=swap');

/* Global styles */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body, html {
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  background-color: #f2f2f2;
}

.container {
  display: flex;
  width: 100vw;
  height: 100vh;
  border-radius: 0;
  overflow: hidden;
  box-shadow: none;
  background-color: #f8f3eb;
}

.left-box, .right-box {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.left-box {
  position: relative;
  background-color: #f8f3eb;
}

.main-picture {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.logo {
  position: absolute;
  top: 20px;
  left: 20px;
  width: 100px;
  height: auto;
  color: white;
  background: rgba(0, 0, 0, 0.5);
  padding: 5px 10px;
  border-radius: 5px;
}

.right-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #f8f3eb;
}

.login-box {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 1.25rem;
  width: 60%;
  max-width: 1200px;
  margin-top: 1.25rem;
  padding: 1.25rem;
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
}

/* Title styling */
.login-title {
  font-family: 'Quicksand', sans-serif;
  font-size: 32px; /* Increase the font size */
  font-weight: 700;
  color: #6d5d4b;
  margin-bottom: 20px; /* Adjust space below the title as needed */
  text-transform: uppercase;
  text-align: center;
  text-decoration: underline; /* Adds underline to the title */
}

/* Input boxes */
.username-inputbox, .password-inputbox {
  width: 100%;
  margin-bottom: 20px;
}

.input-field {
  font-family: 'Quicksand', sans-serif;
  width: 100%;
  padding: 12px;
  border-radius: 20px;
  border: 1px solid #ccc;
  font-size: 16px;
  text-align: center;
}

/* Button styling */
.login-button, .signup-button {
  font-family: 'Quicksand', sans-serif;
  font-weight: 700;
  width: 100%;
  padding: 15px;
  border-radius: 20px;
  font-size: 16px;
  cursor: pointer;
  border: none;
  margin-top: 10px;
}

.login-button {
  background-color: #c5a47e;
  color: white;
}

.signup-button {
  background-color: #4f443a;
  color: white;
}

